--- a/src/components/sections/about/MissionStatement.astro
+++ b/src/components/sections/about/MissionStatement.astro
@@ -7,7 +7,9 @@ const { title, body } = missionStatement;
 
 <section class="section section--tint mission">
   <div class="container mission__inner">
-    <SectionHeader title={title} />
+    <SectionHeader>
+      <h2>{title}</h2>
+    </SectionHeader>
     <p>{body}</p>
   </div>
 </section>
